[package]
name = "daikin_exporter"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger          = "0.9"
lazy_static         = "1.4.0"
log                 = "0.4"
prometheus_exporter = "0.8"
reqwest             = { version = "0.11",features = ["blocking"] }
serde               = { version = "^1.0", features = ["derive"] }
tokio               = { version = "1.14.0", features = ["full"] }
toml                = "0.5.8"

