[package]
name = "daikin_exporter"
version = "1.0.0"
edition = "2018"
authors = ["Eric Hodel"]
description = "Prometheus exporter for Daikin ComfontControl wifi adapters"
homepage = "https://github.com/drbrain/daikin_exporter"
repository = "https://github.com/drbrain/daikin_exporter"
license = "MIT"
keywords = ["prometheus", "exporter", "daikin"]

[dependencies]
anyhow           = "^1"
env_logger       = "0.9"
lazy_static      = "^1.4"
log              = "0.4"
nix              = "0.23.0"
prometheus       = "0.13.0"
prometheus-hyper = "0.1.3"
reqwest          = { version = "0.11",features = ["blocking"] }
serde            = { version = "^1.0", features = ["derive"] }
tokio            = { version = "^1.14", features = ["full"] }
toml             = "0.5.8"
thiserror        = "^1"
